# GammaTechTask

./: CMakeLists.txt  CMakePresets.json  DependenciesInstall.cmake  readme.md
FigueresClientApp/: CMakeLists.txt  ItemsConsumer.hpp  ItemsScene.cc  ItemsScene.hpp  MainWindow.cc  MainWindow.hpp  Table.cc  Table.hpp  main.cc
FigueresClientApp/Figures/: Elips.hpp  FigureBase.hpp  Line.hpp  Rect.hpp  Triangle.hpp
FigueresClientApp/FiguresClient/: CMakeLists.txt  FiguresClient.cc  FiguresClient.hpp
FigueresClientApp/ItemsManager/: ItemsManager.cc  ItemsManager.hpp
FigueresClientApp/resources/: resources.qrc
